--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -12,6 +12,7 @@
     "custom-elements-ts": "0.0.16",
     "dimport": "1.0.0",
     "h-document-element": "2.0.0",
+    "nanomorph": "5.4.0",
     "preact": "10.0.0-rc.1",
     "space-router": "0.7.0",
     "tslib": "1.10.0"
