--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dev:api": "node-dev --no-deps -- src/webhive.api/main.ts",
     "dev:api:d": "node-dev --no-deps --inspect -- src/webhive.api/main.ts",
     "dev:web": "node-dev --no-deps -- src/webhive.web/main.ts",
-    "test": "npm run eslint && npm run tscheck && npm run test:cov",
-    "test:r": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s src/**/*.spec.ts",
-    "test:w": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
+    "test": "npm run eslint && npm run tscheck && npm run test:r",
+    "test:r": "node node_modules/mocha/bin/mocha --node_env=test -r ts-node/register -r @abraham/reflection --timeout 8s src/**/*.spec.ts",
+    "test:w": "npm run test:r -- --watch-files src --watch",
     "test:d": "node --inspect-brk -r ts-node/register/transpile-only -r @abraham/reflection node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
     "tscheck": "echo tscheck... && tsc --noEmit",
     "tscheck:w": "npm run tscheck -- --watch",
