--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.13.2",
     "convict": "^6.2.3",
     "dayjs": "^1.11.2",
+    "delay": "^5.0.0",
     "feedparser": "^2.2.10",
     "got": "^11.1.4",
     "koa": "^2.13.4",
