--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "2019",
   "scripts": {
     "dev": "run-p dev:web",
-    "harvest:d": "node --inspect-brk -r ts-node/register/transpile-only src/webhive.harvest/program.ts --ant=webapplog --no-save",
+    "harvest:d": "node --inspect-brk -r ts-node/register src/webhive.harvest/program.ts --ant=webapplog --no-save",
     "harvest:example": "npx ts-node src/webhive.harvest/program.ts --ant=everylayout --dry-run",
     "harvest": "ts-node src/webhive.harvest/program.ts",
     "dev:api": "node-dev --no-deps -- src/webhive.api/main.ts",
@@ -17,7 +17,7 @@
     "test": "npm run eslint && npm run tscheck && npm run test:r",
     "test:r": "node node_modules/mocha/bin/mocha --node_env=test -r ts-node/register -r @abraham/reflection --timeout 8s src/**/*.spec.ts",
     "test:w": "npm run test:r -- --watch-files src --watch",
-    "test:d": "node --inspect-brk -r ts-node/register/transpile-only -r @abraham/reflection node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
+    "test:d": "node --inspect-brk -r ts-node/register -r @abraham/reflection node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
     "tscheck": "echo tscheck... && tsc --noEmit",
     "tscheck:w": "npm run tscheck -- --watch",
     "tsclint": "tsc --noEmit --strict --forceConsistentCasingInFileNames --noImplicitReturns --noImplicitThis --noUnusedLocals --noUnusedParameters",
