--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,23 +5,14 @@ on:
 jobs:
   build:
     name: 'Test on Node ${{ matrix.node }} and ${{ matrix.os }}'
-    runs-on: '${{ matrix.os }}'
-    strategy:
-      # max-parallel: 1
-      matrix:
-        node:
-          - 16
-        os:
-          - ubuntu-latest
-          # - windows-latest
-          # - macOS-latest
+    runs-on: ubuntu-latest
     steps:
       - name: 'Checkout repository'
         uses: actions/checkout@v2
       - name: 'Setup Node ${{ matrix.node }}'
         uses: actions/setup-node@v2
         with:
-          node-version: '${{ matrix.node }}'
+          node-version: 20
       - name: 'Install depependencies'
         run: npm install
       - name: 'Test'
