--- a/.github/workflows/harvest.yml
+++ b/.github/workflows/harvest.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - name: 'Checkout repository'
         uses: actions/checkout@v3
-      - name: 'Setup Node ${{ matrix.node }}'
+      - name: 'Setup Node 22'
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 22
       - name: 'Install depependencies'
         run: npm install
       - name: 'Harvest'
